# NLP_Project_2024-25

./: .gitignore  README.md  main.py  pyproject.toml
data/inputs/: masked1.txt  masked2.txt  original1.txt  original2.txt  sentence1.txt  sentence2.txt  text1.txt  text2.txt
data/outputs/: mask_similarity_comparison.csv  masked_completion_outputs.json  outputs.json  similarity.csv  similarity_scores.csv  syntax_analysis.csv
src/bonus/: compare_similarity.py  masked_completion.py  syntax_analysis.py
src/one_a/: config.py  pipeline.py  utils.py
src/one_a/rules/: semantic.py  structural.py  surface.py
src/one_b/: models.py  paraphrasers.py  processing.py
src/two/: pipeline.py  runner.py
