[project]
name = "nlp-project-2024-25"
version = "0.1.0"
description = ""
authors = [
    {name = "manolispap21",email = "manolisgrpapoutsakis@gmail.com"}
]
readme = "README.md"
requires-python = "<3.13,>=3.10"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "transformers (>=4.51.3,<5.0.0)",
    "sentence-transformers (>=4.1.0,<5.0.0)",
    "numpy (==1.26.4)",
    "gensim (>=4.3.3,<5.0.0)",
    "nltk (>=3.9.1,<4.0.0)",
    "torch (>=2.7.0,<3.0.0)",
    "spacy (>=3.8.4,<4.0.0)",
    "stanza (>=1.10.1,<2.0.0)",
    "tqdm (>=4.67.1,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "nlp-project-2024-25"
version = "0.1.0"
description = ""
authors = []

package-mode = false